// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#1030a0 to lch 1`] = `
Object {
  "C": 71.65051451250467,
  "L": 26.046035009984124,
  "h": 298.62341843266347,
}
`;

exports[`#8040ff to lab 1`] = `
Object {
  "L": 46.27935378361805,
  "a": 67.32952112002688,
  "b": -84.45226310080702,
}
`;

exports[`roundtrip lab viridis 1`] = `
Object {
  "b": 84,
  "g": 1,
  "r": 68,
}
`;

exports[`roundtrip lab white 1`] = `
Object {
  "b": 255,
  "g": 255,
  "r": 255,
}
`;

exports[`roundtrip lch #ff8040 1`] = `
Object {
  "b": 64,
  "g": 128,
  "r": 255,
}
`;

exports[`roundtrip lch viridis 1`] = `
Object {
  "b": 84,
  "g": 1,
  "r": 68,
}
`;

exports[`roundtrip xyz random 1`] = `
Object {
  "b": 84,
  "g": 1,
  "r": 68,
}
`;

exports[`roundtrip xyz viridis 1`] = `
Object {
  "b": 84,
  "g": 1,
  "r": 68,
}
`;

exports[`xyz to rgb 1`] = `
Object {
  "b": 255,
  "g": 255,
  "r": 0,
}
`;
